--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,12 @@
       <div class="container-fullwidth">
         <ul class="nav">
           <li class="nav-item">
+            <a class="nav-link" href="{{url_for("index")}}">Books</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Profile</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#">Login</a>
           </li>
         </ul>
