--- a/templates/book.html
+++ b/templates/book.html
@@ -5,5 +5,7 @@
 {% endblock %}
 
 {% block body %}
-<h1>{{title}}</h1>
+<h1>{{book.title}}</h1>
+<h2>{{book.name}}</h2>
+<h3>{{book.year}}</h3>
 {% endblock %}
