--- a/templates/login.html
+++ b/templates/login.html
@@ -7,14 +7,14 @@
     </head>
     <body>
         <div class="container">
-          <form action="{{url_for(index)}}" method="POST">
+          <form action="{{url_for("login")}}" method="POST">
             <div class="form-group">
               <label for="exampleInputEmail1">Username</label>
-              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <input type="text" class="form-control" id="InputUsername" aria-describedby="emailHelp" placeholder="Enter Username">
             </div>
             <div class="form-group">
               <label for="exampleInputPassword1">Password</label>
-              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+              <input type="password" class="form-control" id="InputPassword" placeholder="Password">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
