--- a/templates/login.html
+++ b/templates/login.html
@@ -9,11 +9,11 @@
         <div class="container">
           <form action="{{url_for("login")}}" method="POST">
             <div class="form-group">
-              <label for="exampleInputEmail1">Username</label>
+              <label for="InputEmail">Username</label>
               <input type="text" class="form-control" id="InputUsername" aria-describedby="emailHelp" placeholder="Enter Username">
             </div>
             <div class="form-group">
-              <label for="exampleInputPassword1">Password</label>
+              <label for="InputPassword">Password</label>
               <input type="password" class="form-control" id="InputPassword" placeholder="Password">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
