--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,7 @@ Books
     <button type="submit" class="btn btn-primary">Submit</button>
   </div>
 </form>
+<h1>{{user}}</h1>
 <h1>Books</h1>
 <ul class="list-group">
   {% for book in books %}
