--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
             <a class="nav-link" href="#">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Login</a>
+            <a class="nav-link" href="{{url_for("index")}}" method="POST" >Login</a>
           </li>
         </ul>
       </div>
