--- a/templates/login.html
+++ b/templates/login.html
@@ -9,15 +9,20 @@
         <div class="container">
           <form action="{{url_for("login")}}" method="POST">
             <div class="form-group">
-              <label for="InputEmail">Username</label>
-              <input type="text" class="form-control" id="InputUsername" aria-describedby="emailHelp" placeholder="Enter Username">
+              <label >Username</label>
+              <input type="text" class="form-control" name="InputUsername" aria-describedby="emailHelp" placeholder="Enter Username">
             </div>
             <div class="form-group">
-              <label for="InputPassword">Password</label>
-              <input type="password" class="form-control" id="InputPassword" placeholder="Password">
+              <label >Password</label>
+              <input name="InputUserPassword"type="password" class="form-control"  placeholder="Password">
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
           </form>
+        </div>
+        <div >
+          <form action="{{url_for("sign_up")}}">
+            <button type="submit">Sign Up</button>
+           </form>
         </div>
     </body>
 </html>
